<resources>
    <string name="app_name">kotlinApp</string>
    <string name="title_activity_choice_allergy">ChoiceAllergyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Strings used for allergies choice-->
    <string name="question_text">A quoi êtes-vous allergique ?</string>
    <string name="milk_allergy_text">Lait</string>
    <string name="gluten_allergy_text">Gluten</string>
    <string name="fish_allergy_text">Poisson</string>
    <string name="mustard_allergy_text">Moutarde</string>
    <string name="egg_allergy_text">Œuf</string>
    <string name="save_text">Enregistrer</string>
</resources>
