<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceAllergyActivity"
    android:id="@+id/coordinatorLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="411dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                tools:layout_conversion_absoluteHeight="56dp"
                tools:layout_conversion_absoluteWidth="411dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/question_text"
            android:textColor="@color/colorText"
            android:textSize="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <TextView
            android:id="@+id/milk_allergy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="56dp"
            android:text="@string/milk_allergy_text"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question" />

        <Switch
            android:id="@+id/milk_allergy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/milk_allergy_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/gluten_allergy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:text="@string/gluten_allergy_text"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_allergy_switch"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/gluten_allergy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/milk_allergy_switch" />

        <TextView
            android:id="@+id/mustard_allergy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:text="@string/mustard_allergy_text"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/mustard_allergy_switch"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/egg_allergy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:text="@string/egg_allergy_text"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/egg_allergy_switch"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fish_allergy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:text="@string/fish_allergy_text"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/fish_allergy_switch"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/mustard_allergy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fish_allergy_switch" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:background="@color/colorPrimary"
            android:onClick="saveAllergies"
            android:text="@string/save_text"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorTextWhite"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/testResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="19dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/milk_allergy_text"
            app:layout_constraintEnd_toStartOf="@+id/milk_allergy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_lait" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="23dp"
            android:layout_height="34dp"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_allergy_text"
            app:layout_constraintEnd_toStartOf="@+id/gluten_allergy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_ble" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="22dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/mustard_allergy_text"
            app:layout_constraintEnd_toStartOf="@+id/mustard_allergy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_moutarde" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="34dp"
            android:layout_height="19dp"
            app:layout_constraintBottom_toBottomOf="@+id/fish_allergy_text"
            app:layout_constraintEnd_toStartOf="@+id/fish_allergy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_poisson" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="25dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/egg_allergy_text"
            app:layout_constraintEnd_toStartOf="@+id/egg_allergy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_oeuf" />

        <Switch
            android:id="@+id/fish_allergy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gluten_allergy_switch" />

        <Switch
            android:id="@+id/egg_allergy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mustard_allergy_switch" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>